# dataverse-app

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  openapi.yml  packageinfo.py  setup.cfg  setup.py
.github/workflows/: ci.yml
dataverse_query/: dataset.py  dataverse_query.py  utils.py
examples/: dataset.json
tests/: test_dataset.py
