[metadata]
name = dataverse-marketplace-app
version = v0.0.1
description = Dataverse repository query app for MarketPlace.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/materials-marketplace/dataverse-app
author = Pablo de Andres, Pranjali Singh
author_email = pablo.de.andres@iwm.fraunhofer.de, pranjali.singh@iwm.fraunhofer.de
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    Flask==2.2.2
    fastapi==0.75.2
    jsonpath-ng==1.5.3
    # For handling ISO 639-1 and ISO 639-2 language codes.
    pycountry==22.3.5
    requests~=2.26
    requests_oauthlib==1.3.1
    rdflib>=6.0.2, < 7.0.0
python_requires = >=3.8

[options.extras_require]
dev =
    bumpver==2021.1114
    dunamai==1.7.0
pre_commit =
    pre-commit==2.19.0
tests =
    pytest==6.2.5

[flake8]
ignore =
    # Line length handled by black.
    E501,
    # Line break before binary operator, preferred formatting for black.
    W503,
    # Whitespace before ':', preferred formatting for black.
    E203,

[bumpver]
current_version = "v0.0.1"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True
