[metadata]
name = dataverse_marketplace_app
version = v0.0.1
description = Dataverse repository query app for MarketPlace.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/materials-marketplace/dataverse-app
author = Pablo de Andres, Pranjali Singh
author_email = pablo.de.andres@iwm.fraunhofer.de, pranjali.singh@iwm.fraunhofer.de
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    Flask==2.3.2
    jsonpath-ng==1.5.3
    pycountry==22.3.5
    rdflib>=6.0.2,<7.0.0
    requests~=2.31
python_requires = >=3.9

[options.extras_require]
dev =
    bumpver==2021.1114
    dunamai==1.7.0
pre_commit =
    pre-commit==2.19.0

[bumpver]
current_version = "v0.0.1"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True
